testdata/operators/pass/c_style.dws
// Ported from: reference/dwscript-original/Test/OperatorOverloadPass/c_style.pas
// Purpose: Test C-style operators (==, !=) alongside Pascal-style (=, <>)
// Expected: Both operator styles work and can have different implementations

function EqualWithPrint(a, b  : Integer) : Boolean;
begin
   Result := a = b;
   PrintLn('hello');
end;

function DiffWithPrint(a, b  : Integer) : Boolean;
begin
   Result := a <> b;
   PrintLn('world');
end;

operator == (Integer, Integer) : Boolean uses EqualWithPrint;
operator != (Integer, Integer) : Boolean uses DiffWithPrint;

var a := 1;
var b := 1;

PrintLn(a = b);
PrintLn(a == b);
PrintLn(a <> b);
PrintLn(a != b);
PrintLn(a == a);
PrintLn(a != a);
